Fixed Alignment Issues

--- a/sass/_shapes.scss
+++ b/sass/_shapes.scss
@@ -6,7 +6,7 @@
   min-height: 100px;
   background-color: rgb(44, 108, 128);
   position: relative;
-  margin: 10px;
+  margin: 25px;
 }
 .circle::after {
   content: " ";
